# atform

./: .gitignore  README-dev.txt  README.md  README.txt  pyproject.toml  run_gui_tests.py
.github/actions/setup-runner-action/: action.yaml
.github/workflows/: release.yaml
atform/: __init__.py  acroform.py  addtest.py  arg.py  cache.py  content.py  embed.py  error.py  field.py  format.py  gen.py  id.py  idlock.py  image.py  label.py  meta.py  misc.py  notice.py  paragraph.py  parallelbuild.py  pdf.py  procedure.py  ref.py  sig.py  state.py  term.py  textstyle.py  vcs.py  version.py
atform/gui/: app.py  build.py  buildlist.py  common.py  diff.py  diffwidget.py  preview.py  search.py  searchwidget.py  selectlist.py  selectref.py  statusbar.py  testlist.py  tkwidget.py
atform/iso7010/: __init__.py
atform/pdf/: __init__.py  acroform.py  approval.py  doc.py  environ.py  equip.py  imgflow.py  layout.py  notes.py  notice.py  objective.py  paragraph.py  precondition.py  procedure.py  refs.py  section.py  term.py  textstyle.py  title.py
doc/source/: .gitignore  api.rst  auto.rst  changelog.sty  cli.rst  conf.py  gui.rst  image.rst  index.rst  intro.rst  meta.rst  org.rst  ref.rst  setup.rst  term.rst  title.sty  vcs.rst  write.rst
doc/source/_ext/: iso7010.py
doc/source/examples/: .gitignore  alarm.py  alarms.csv  button.py  field.py  format.py  iterate.py  label.py  listtest.py  main.py  minimal.py  notice.py  procedure.py  project_info.py  ref.py  section.py  setup.py  skip.py  snip.py  switch.py  term.py  variable.py  xref.py
doc/source/images/: python-powered.eps  python_install.xcf
testgen/: __init__.py  content.py  field.py  format.py  id.py  label.py  misc.py  pdf.py  ref.py  sig.py  vcs.py  version.py
tests/: test_add_term.py  test_addtest.py  test_arg.py  test_cache.py  test_content.py  test_copyright.py  test_diff.py  test_error.py  test_examples.py  test_field.py  test_format.py  test_get_term.py  test_id.py  test_idlock.py  test_image.py  test_label.py  test_meta.py  test_paragraph.py  test_pdf.py  test_pdfoutput.py  test_project_info.py  test_ref.py  test_section.py  test_setup_only.py  test_sig.py  test_term.py  test_vcs.py  test_version.py  utils.py
tests/gui/: igtest.py  test_app.py  test_build.py  test_buildlist.py  test_diff.py  test_diffwidget.py  test_search.py  test_searchwidget.py  test_selectlist.py  test_selectref.py  test_testlist.py
