[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"


[project]
name = "atform"
description = "Acceptance test procedure form generator."
readme = "README.md"
authors = [
    {name = "Jason Valenzuela"},
    {email = "jvalenzuela1977@gmail.com"},
]
license = {file = "LICENSE.txt"}
dynamic = ["version"]

# doc/source/intro.rst and .github/workflow/release.yaml need to match this.
# Range of versions is equivalent to those supported by Reportlab.
requires-python = ">= 3.8, < 3.14"

dependencies = [
    "reportlab>=4.2.0",
    # Pillow is explicitly omitted as it is already a reportlab requirement.
]

classifiers = [
    "Environment :: Console",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing :: Acceptance",
    "Topic :: Text Processing :: Markup",
]


[project.urls]
Homepage = "https://github.com/jvalenzuela/atform"
Repository = "https://github.com/jvalenzuela/atform.git"
Issues = "https://github.com/jvalenzuela/atform/issues"


[tool.hatch.version]
path = "atform/version.py"
